# Age_FisherVectors

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  execute_knn.sh  linear.py
libs/dlib/: compile_dlib_python_module.bat
libs/dlib/gui_widgets/: drawable.h
libs/dlib/matrix/: matrix_trsm.h
libs/dlib/tools/python/: CMakeLists.txt
src/: main.cpp  rr.cpp  search.cpp
